# KyoAiteruTracksSearch

./: README.md  package.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
py-functions/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
py-functions/src/handlers/: addmessage.py  makeuppercase.py  scraping_test.py  setagaya_sougou_scrape.py  test.py
py-functions/src/handlers/kanagawa/kawasaki/: todoroki.py
py-functions/src/handlers/tokyo/setagaya/: scraping.py  setagaya_sougou_scrape.py
py-functions/src/models/: r2.py  scraping.py  test.py
src/apis/firebase/: comments.ts
src/auth/: AuthProvider.tsx
src/components/ecosystems/: CloseButton.tsx  DrawerContent.tsx
src/components/ecosystems/shoes/: ShoesImages.tsx
src/components/organisms/: Calender.tsx  Drawer.tsx
src/components/organisms/global/: Comment.tsx  Comments.tsx  R2Image.tsx
src/components/organisms/home/: HomeCalendar.tsx  HomeComments.tsx
src/components/organisms/layouts/: FooterLinks.tsx  HeaderLinks.tsx  SiteOutline.tsx
src/components/organisms/tracks/: TrackComment.tsx  TrackDetails.tsx  TrackList.tsx  TrackTodayAvailability.tsx
src/examples/stadiumAvailability/: stadiumAvailabilitySlice.ts
src/hooks/: useFetchTrackAvailabilityJson.ts  useFetchTrackDetail.ts
src/pages/auths/: Login.tsx
src/pages/layouts/: Home.tsx
src/pages/mypage/: ProfileEdit.tsx  ProfilePage.tsx
src/store/: index.ts
src/utils/: timeUtils.ts  trackUtils.ts
ts-functions/src/: index.ts
ts-functions/src/scrape/: fetchSetagayaAvailability.ts
(+1 files in other folders)
