[project]
name = "py-functions"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "subaru-hello" }
]
dependencies = [
    "google-cloud-firestore>=2.19.0",
    "firebase-functions>=0.4.2",
    "firebase-admin>=6.6.0",
    "bs4>=0.0.2",
    "boto3>=1.35.70",
    "black>=24.10.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_functions"]
